# youtube-playlist-mcp

./: .gitignore  README.md  pyproject.toml
src/youtube_playlist_mcp/: auth.py  authenticate.py  server.py  youtube.py
